--- a/main.css
+++ b/main.css
@@ -130,4 +130,13 @@ button:hover {
     padding: 20px 0;
     margin-top: 30px;
 }
-
+.pep {
+    float: left;
+    
+    margin-right: 30px;
+    margin-top: 10px;
+}
+.pep1 {
+    float: left;
+    margin-right: 30px;
+}
